<resources>
    <string name="app_name">TrafficDrive Partner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registraion">REGISTRATION</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_signin">Login</string>
    <string name="action_loading">Loading</string>
    <string name="go_offline">Go Offline</string>
    <string name="trip_summary">Trip Summary</string>
    <string name="home">Home</string>
    <string name="dialog_app_exit">Are you sure you want to logout</string>
    <string name="dialog_app_exiting">Are you sure you want to Exit</string>
    <string name="title_activity_driver_alert">Alert</string>
    <string name="bank_account">Bank Account</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_trip_summary">Summary Not Available</string>
    <string name="action_loading_error">Error</string>
    <string name="action_loading_sucess">Success</string>
    <string name="action_loading_cancel">Cancelling</string>
    <string name="action_loading_rating">Rating</string>
    <string name="action_label_forgotpassword">Forgot password ?</string>
    <string name="action_label_forgotpassword_header">FORGOT PASSWORD</string>
    <string name="forgotpassword">Please enter the email address of your account</string>
    <string name="action_label_changepassword">CHANGE PASSWORD</string>
    <string name="enteremail">Enter your email address</string>
    <string name="forgotpasswordlink">Send me a password reset link</string>
    <string name="action_label_currentpassword">Current Password</string>
    <string name="action_label_newassword">New Password</string>
    <string name="action_label_confirmnewpassword">Confirm New Password</string>
    <string name="action_label_signin">Sign In</string>
    <string name="action_label_done">Done</string>
    <string name="lasttrip_label">Last Trip</string>
    <string name="todayearnings_label">Today Earnings</string>
    <string name="todaytips_label">Today Tips</string>
    <string name="lasttrip_emtpy_label1">No Trip</string>
    <string name="lasttrip_emtpy_label"> Trip</string>
    <string name="todayearning_no_online_label">No Online</string>
    <string name="todayearning_no_trips_label"> Trip</string>
    <string name="todayearning_no_tips_label">No Trips</string>
    <string name="cabily_driver_alert_lable_accept_Textview">ACCEPT</string>
    <string name="cabily_driver_alet_lable_reject_Textview">DECLINE</string>
    <string name="dialog_go_offline">Are you sure you want to go offline?</string>
    <string name="dialog_go_yes">Yes</string>
    <string name="dialog_go_no">No</string>
    <string name="dialog_gooffline_title">Go Offline</string>
    <string name="dialog_go_on_line">Are you sure you want to go online?</string>
    <string name="alert_tape_toaccept">TAP TO ACCEPT RIDE</string>
    <string name="alert_sorry_label_title">Sorry!</string>
    <string name="alert_label_ok">OK</string>
    <string name="alert_label_content1">We could not accepte your request</string>
    <string name="alert_label_content2">No cabs has been available at your place. Kindly try again after sometime</string>
    <string name="alert_enter_drop_location">Please enter drop location</string>
    <string name="alert_nointernet">No Internet Connection</string>
    <string name="alert_servererror">Server Error</string>
    <string name="alert_gpsEnable">Enable GPS to locate your location</string>
    <string name="alert_nocar">Sorry! We do not provide services in your city yet.</string>
    <string name="lablesigningin_Textview">Signing In</string>
    <string name="label_gps_textview">Location Services Disabled Please enable location service</string>
    <string name="action_login_validate">Rating</string>
    <string name="action_alert_header">Rating</string>
    <string name="action_alert_empty_email">Email address cannot be empty</string>
    <string name="action_alert_invalid_email">Email address is invalid</string>
    <string name="action_alert_invalid_password">Password cannot be Empty</string>
    <string name="action_alert_SigninFaild">Sign In Failed</string>
    <string name="action_alert_multidevicelogin">Sorry</string>
    <string name="action_alert_multideviceloginmsg">Already Logged in other device </string>
    <string name="action_alert_signinfaildmsg">Invalid username or  password </string>
    <string name="action_alert_unabletocreatemap"> Sorry! unable to create maps </string>
    <string name="action_alert_bank_Username">Account Holder Name can\'t be empty</string>
    <string name="action_alert_bank_accountno">Account Number can\'t be empty</string>
    <string name="action_alert_bank_address">Address can\'t be empty</string>
    <string name="action_alert_bank_name">Bank Name can\'t be empty</string>
    <string name="action_alert_branch_name">Branch Name can\'t be empty </string>
    <string name="action_alert_branch_address">Branch Address can\'t be empty </string>
    <string name="action_alert_bank_ifs_code">IFSC code can\'t be empty</string>
    <string name="action_alert_bank_routingno">Routing Number can\'t be empty</string>
    <string name="action_alert_bankinfo_invails">Invalid Bank Details</string>
    <string name="alertsaved_label_title">Saved successfully</string>
    <string name="drivernotlogged_label_title">Driver not logged in</string>
    <string name="waitfortransaction_label_title">please wait until the transaction in complete</string>
    <string name="action_alert_sub">Subject  can\'t be empty</string>
    <string name="action_alert_msg">Message can\'t be empty</string>
    <string name="cabily_driver_main_lable_signin_Textview">SIGN IN</string>
    <string name="cabily_driver_main_lable_register_Textview">Register</string>
    <string name="cabily_driver_main_lable_tripsummery_Textview">TRIP SUMMARY</string>
    <string name="cabily_driver_tip_amount">Your Tip Amount :</string>
    <string name="cabily_wallet_used_label">Wallet used</string>
    <string name="accept_total_bill_txtview">Total Bill:</string>
    <string name="accept_total_paid_bill_txtview">Total Paid:</string>
    <string name="accept_total_completed_txtview">Completed</string>
    <string name="accept_total_paid_txtview">Amount paid</string>
    <string name="accept_total_rides">Rides</string>
    <string name="myprofile_label_firstname">First Name :</string>
    <string name="myprofile_label_lastname">Last Name :</string>
    <string name="myprofile_label_phone">Phone :</string>
    <string name="myprofile_label_email">Email :</string>
    <string name="myprofile_label_company">Company :</string>
    <string name="myprofile_label_address1">Address 1 :</string>
    <string name="myprofile_label_address2">Address 2 :</string>
    <string name="myprofile_label_city">City :</string>
    <string name="myprofile_label_country">Country :</string>
    <string name="myprofile_label_state">State :</string>
    <string name="myprofile_label_postcode">Post code :</string>
    <string name="myprofile_label_save">SAVE</string>
    <string name="myprofile_label_myprofile">My Profile</string>
    <string name="myprofile_label_manditory">*</string>
    <string name="bank_lable_accountholder_name">Enter account holder name</string>
    <string name="bank_lable_accountholder_address">Enter account holder address</string>
    <string name="bank_lable_account_number">Enter account number</string>
    <string name="bank_lable_bank_name">Enter bank name</string>
    <string name="bank_lable_branch_name">Enter branch name</string>
    <string name="bank_lable_branch_address">Enter branch address</string>
    <string name="bank_lable_ifsc_code">Enter Ifsc code</string>
    <string name="bank_lable_routing_number">Enter routing number</string>
    <string name="bank_lable_bankdetails">Bank account</string>
    <string name="paymnet_lable_payment_text">Payment</string>
    <string name="paymnet_lable_amount_text">Amount </string>
    <string name="paymnet_lable_receivddate_text">Received Date</string>
    <string name="payment_statment">PAYMENT STATEMENT</string>
    <string name="payment_details">PAYMENT DETAILS</string>
    <string name="payment_list_ridesid">Ride Id</string>
    <string name="payment_no_payments">No Payments Available</string>
    <string name="payment_to">to</string>
    <string name="fetchdatatoast">Unable to fetch data from server</string>
    <string name="tripsummery_details_list">Trip Summary Detail</string>
    <string name="tripsummery_all_list">All</string>
    <string name="tripsummery_onride_list">On Ride</string>
    <string name="tripsummery_complete_list">Completed</string>
    <string name="tripsummery_setail_cancel_label">Cancel Ride</string>
    <string name="tripsummery_setail_continue_label">Continue Ride</string>
    <string name="tripsummery_rideid_label">ID :</string>
    <string name="tripsummery_add_Ride_label">Ride</string>
    <string name="tripsummery_add_Payment_label">Payment</string>
    <string name="tripsummery_add_km_label">km</string>
    <string name="tripsummery_add_mins_label">mins</string>
    <string name="tripsummery_waittime_label">Wait Time</string>
    <string name="tripsummery_timetaken_label">Time Taken</string>
    <string name="tripsummery_ridedistance_label">Ride Distance</string>
    <string name="tripsummery_pickup_label">Pickup</string>
    <string name="tripsummery_drop_label">Drop</string>
    <string name="tripsummery_cancelreason_label">Why are you cancelling?</string>
    <string name="tripsummery_noreason_label">No Reasons Available</string>
    <string name="confirmdelete">Confirm Cancel</string>
    <string name="surewanttodelete">Are you sure ?</string>
    <string name="label_yes">YES</string>
    <string name="label_no">NO</string>
    <string name="userinfo_cancel_label">CANCEL TRIP</string>
    <string name="goonline_label">Go Online</string>
    <string name="arrivedtrip_info_label">Info</string>
    <string name="arrivedtrip_id_label">ID :</string>
    <string name="arrivedtrip_arrivedtriptv_label">Slide to Arrived</string>
    <string name="alert_canceld_label_title">Cancelled</string>
    <string name="alert_tripdetail_label_title">Trip Detail</string>
    <string name="alert_tripdetail_droplocation_label_title">Drop Location</string>
    <string name="alert_tripdetail_select_droplocation_label_title">Select drop location</string>
    <string name="alert_tripdetail_droptime_label_title">Drop time</string>
    <string name="alert_tripdetail_select_droptime_label_title">Select drop time</string>
    <string name="alert_tripdetail_waitingtime_label_title">Waiting Time</string>
    <string name="alert_tripdetail_ridedistance_label_title">Ride Distance</string>
    <string name="alert_tripdetail_enterdistance_label_hint">Enter Distance(eg:25)</string>
    <string name="alert_tripdetail_endtrip_label">Slide to End Trip</string>
    <string name="arrived_alert_content1">Unable to contact user. please try again after sometime</string>
    <string name="voice_navigationlabel">Start navigation</string>
    <string name="action_comment">Please enter your comment</string>
    <string name="lbel_stopwait">Stop </string>
    <string name="lbel_Note">Note:</string>
    <string name="lbel_Note_Detail">Please make sure that drop time is before atleast an hour from now and waiting time is between of pickup and drop time</string>
    <string name="lbel_reviwe_header">Please Rate</string>
    <string name="lbel_rating_details">Please rate the customer. All fields are mandatory</string>
    <string name="lbel_reviwe_skip">Skip</string>
    <string name="lbel_rate_rider">Rate Rider</string>
    <string name="lbel_rate_nooptions">No Options Available</string>
    <string name="end_trip_details_hours">Hours</string>
    <string name="end_trip_details_min">Minutes</string>
</resources>