<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <RelativeLayout
        android:id="@+id/layout_reviwes_header"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/app_color">

        <com.cabily.cabilydriver.widgets.CustomTextView
            android:id="@+id/end_reviwes_nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/lbel_reviwe_header"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <com.cabily.cabilydriver.widgets.CustomTextView
            android:id="@+id/review_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/lbel_reviwe_skip"
            android:textColor="#ffffff"
            android:textSize="15sp" />


        <com.cabily.cabilydriver.widgets.CustomTextView
            android:id="@+id/reviwes_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/lbel_stopwait"
            android:textColor="#cc0000"
            android:textSize="14sp"
            android:visibility="gone" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/layout_reviwesubmit_btn"
        android:layout_below="@+id/layout_reviwes_header"
        android:background="#00000000"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#00000000">

            <TextView
                android:id="@+id/rating_page_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/lbel_rating_details"
                android:textColor="#010101"
                android:textSize="13dp" />


            <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
                android:id="@+id/listView_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rating_page_lable"
                android:layout_marginBottom="30dp"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:dividerHeight="1dp"></com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView>



            <EditText
                android:id="@+id/my_rides_rating_comment_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listView_rating"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_curve_background_grey"
                android:gravity="top|left"
                android:hint="@string/action_comment"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"
                android:lines="30"

                android:minLines="5"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:textColor="#4e4e4e"
                android:textColorHint="#4e4e4e"
                android:textSize="13sp"/>

            <com.cabily.cabilydriver.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_below="@+id/my_rides_rating_comment_edittext"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:visibility="invisible"/>



            <com.cabily.cabilydriver.widgets.CustomTextView
                android:id="@+id/reviwes_no_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/listView_rating"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/lbel_rate_nooptions"
                android:visibility="gone" />


        </RelativeLayout>
    </ScrollView>





    <RelativeLayout
        android:id="@+id/layout_reviwesubmit_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#80000000">


        <Button
            android:id="@+id/btn_submit_reviwes"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/app_color"
            android:text="@string/lbel_rate_rider"
            android:textColor="#ffffff"
            android:textSize="15sp" />


    </RelativeLayout>


</RelativeLayout>
